# mongo-cxx-driver

./: .gitattributes  .mci.yml  README.md  SConstruct
.evergreen/: compile.sh  install.sh
docs/content/mongocxx-v3/: installation.md
examples/: CMakeLists.txt
src/bsoncxx/: CMakeLists.txt
src/bsoncxx/builder/: core.cpp  core.hpp
src/bsoncxx/cmake/: libbsoncxx-config.cmake.in  libbsoncxx-static-config.cmake.in
src/bsoncxx/private/: libbson.cpp  libbson.hh
src/bsoncxx/test/: CMakeLists.txt  bson_builder.cpp
src/mongocxx/: CMakeLists.txt  bulk_write.cpp  collection.cpp  database.cpp  pipeline.hpp  read_preference.cpp  validation_criteria.hpp
src/mongocxx/cmake/: libmongocxx-config.cmake.in  libmongocxx-static-config.cmake.in
src/mongocxx/gridfs/: bucket.cpp  bucket.hpp  downloader.cpp  uploader.cpp  uploader.hpp
src/mongocxx/gridfs/private/: bucket.hh  downloader.hh  uploader.hh
src/mongocxx/options/: create_collection.hpp  create_view.hpp
src/mongocxx/private/: collection.hh  libmongoc.cpp  libmongoc.hh
src/mongocxx/result/: insert_many.cpp  insert_many.hpp
src/mongocxx/test/: CMakeLists.txt  collection.cpp  collection_mocked.cpp  database.cpp  read_concern.cpp  read_preference.cpp  write_concern.cpp
src/mongocxx/test/gridfs/: bucket.cpp
src/mongocxx/test/options/: aggregate.cpp  count.cpp  create_collection.cpp  delete.cpp  (+6 more)
static_test/: dynamic_bson.cpp  dynamic_mongo.cpp  static_bson.cpp  static_mongo.cpp  test.sh
static_test/find_package_bsoncxx/: CMakeLists.txt  hello_bsoncxx.cpp
static_test/find_package_bsoncxx_static/: CMakeLists.txt  hello_bsoncxx.cpp
static_test/find_package_mongocxx/: CMakeLists.txt  hello_mongocxx.cpp
static_test/find_package_mongocxx_static/: CMakeLists.txt  hello_mongocxx.cpp
(+1 files in other folders)
